--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
         />
 
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
         <link 
           rel="website icon"
           type="image/x-icon"
