--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-    <head>
+    <link>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta
@@ -11,6 +11,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
         />
+
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
